home.html if문수정

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -55,7 +55,7 @@
             더 많은 편집자 보러가기>
         </div>
     </a>
-    {% endif %}
+    {% else %}
     <div class="top">
         <div>오늘도,</div>
         <div>00명의 유튜버와 00명의 편집자가</div>
@@ -121,6 +121,7 @@
             </div>
         </a>
     </div>
+    {% endif %}
     {% endblock content %}
 </body>
 </html>
