--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -60,7 +60,7 @@
         <div>오늘도,</div>
         <div>00명의 유튜버와 00명의 편집자가</div>
         <div>편-안에서 만나고 있습니다.</div>
-    </div>d
+    </div>
     <div class="best">
         <div class="title">이번주의 BEST 편집자</div>
         <div class="content">
