detail & list_youtuber html 완성

--- a/project/app/templates/list_editor.html
+++ b/project/app/templates/list_editor.html
@@ -29,8 +29,7 @@
         <option value='all' selected>경력</option>
         <option value='newbee'>경력무관</option>
         <option value='one_five'>1-5년</option>
-        <option value='five_ten'>5-10년</option>
-        <option value='over_ten'>10년 이상</option>
+        <option value='five_ten'>5년 이상</option>
     </select>
 
      <select name="period">
