--- a/project/app/templates/registration/login.html
+++ b/project/app/templates/registration/login.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-    {% extends 'base.html' %}
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'registration.css' %}">
-    <title>Document</title>
-</head>
+{% block head %}
+<link rel="stylesheet" href="{% static 'login.css' %}" type='text/css'>
+{% endblock head %}
 
-<body>
     {% block content %}
     <form class="login_box" method="POST"> 
         {% csrf_token %}
