--- a/project/app/templates/form_to_youtuber.html
+++ b/project/app/templates/form_to_youtuber.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'home.css' %}" type='text/css'>
+<link rel="stylesheet" href="{% static 'form_to_youtuber.css' %}" type='text/css'>
 {% endblock head %}
 
     {% block content %}
