--- a/project/app/templates/registration/signup.html
+++ b/project/app/templates/registration/signup.html
@@ -1,21 +1,11 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block head %}
+<link rel="stylesheet" href="{% static 'signup.css' %}" type='text/css'>
+{% endblock head %}
 
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'registration.css' %}">
-    <title>Document</title>
-</head>
-
-<body>
-    <total>
+    {% block content %}
         <form class="signup_box" method="POST">
         {% csrf_token %}
         <h1 class="signup_title">회원가임</h1>
@@ -28,6 +18,6 @@
             <button class="signup_button"type="submit">가입하기</button>
         </div>
         </form>
-    </total>
+    {% endblock content %}
 </body>
 </html>
