--- a/project/app/templates/new_editor.html
+++ b/project/app/templates/new_editor.html
@@ -13,9 +13,15 @@
     <div class="top">
         <h3>편집자 등록하기</h3>
         <div class="top_information">
-            <div class="top_information_text">기본정보</div>
-            <
-            <a><div class="top_information_img">프로필 등록하러 가기</div></a>
+            <span class="top_information_text">기본정보</span>
+            <div class="profile_wrapper">
+                <div class="profile_img_input">
+                    <input class="profile_img_file" type="file" name="img">
+                </div>
+                <div class="profile_detail_input">
+                    <input type="text" name="author">
+                </div>
+            </div>
         </div>
     </div>
     <div class="content_box">필수정보
