--- a/project/app/templates/list_youtuber.html
+++ b/project/app/templates/list_youtuber.html
@@ -1,7 +1,14 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'list_youtuber.css' %}" type='text/css'>
+{% endblock head %}
+
 {% block content %}
 <div class="top">
-    <p class="top_text">ㅇㅇ명의 유튜버가가<br>편집자님을 기다리고 있어요!</p>
-    <a><div class="new button">모집 공고 내러 가기</div></a>
+    <p class="top_text"><strong>ㅇㅇ명의 유튜버</strong>가<br>편집자님을 기다리고 있어요!</p>
+    <a><div class="new_button">모집 공고 내러 가기</div></a>
 </div>
 <div class="filter_box">
     <select name="tool">
@@ -50,13 +57,16 @@
     </select>
 </div>
 
-<div class="submit_button"><button>나에게 맞는 유튜버 보기</button></div>
-
-   <select name="sort">
-        <option value='newest' selected>최신 순</option>
+<div class="submit_button">
+    <button>나에게 맞는 유튜버 보기</button>
+    
+    <select class="sort" name="sort">
+        <option value='all' selected>정렬 순서</option>
+        <option value='newest'>최신 순</option>
         <option value='rate'>별점 순</option>
         <option value='review'>리뷰 순</option>
     </select>
+</div>    
 
 <div class="post_box">
     <div class="post_item">
@@ -65,12 +75,14 @@
             <p class="post_title">신생 유튜브 영상 제작자 구합니다</p>
             <div class="filter_item_wrapper">
                 <span class="post_filter_item">#먹방</span>
-                <span class="post_filter_item">#먹방</span>
-                <span class="post_filter_item">#먹방</span>
+                <span class="post_filter_item">#경력무관</span>
+                <span class="post_filter_item">#베가스</span>
             </div>
         </div>
+        <div class="line">
+        </div>
         <div class="post_item_right">
-            <p class="post_deadline">3일 남음</p>
+            <p class="post_deadline"><strong>3</strong> 일 남음</p>
         </div>
     </div>
     <div class="post_item">
@@ -79,12 +91,14 @@
             <p class="post_title">신생 유튜브 영상 제작자 구합니다</p>
             <div class="filter_item_wrapper">
                 <span class="post_filter_item">#먹방</span>
-                <span class="post_filter_item">#먹방</span>
-                <span class="post_filter_item">#먹방</span>
+                <span class="post_filter_item">#경력무관</span>
+                <span class="post_filter_item">#베가스</span>
             </div>
         </div>
+        <div class="line">
+        </div>
         <div class="post_item_right">
-            <p class="post_deadline">3일 남음</p>
+            <p class="post_deadline"><strong>3</strong> 일 남음</p>
         </div>
     </div>
     <div class="post_item">
@@ -93,12 +107,14 @@
             <p class="post_title">신생 유튜브 영상 제작자 구합니다</p>
             <div class="filter_item_wrapper">
                 <span class="post_filter_item">#먹방</span>
-                <span class="post_filter_item">#먹방</span>
-                <span class="post_filter_item">#먹방</span>
+                <span class="post_filter_item">#경력무관</span>
+                <span class="post_filter_item">#베가스</span>
             </div>
         </div>
+        <div class="line">
+        </div>
         <div class="post_item_right">
-            <p class="post_deadline">3일 남음</p>
+            <p class="post_deadline"><strong>3</strong> 일 남음</p>
         </div>
     </div>
 </div>
