--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </div>
-        <a class="nav-item" href="{% url 'home' %}">
+        <a class="nav-item" href="{% url 'list_editor' %}">
             <div class="button">
                 00명의 편집자 보러가기 >
             </div>
